Fixed the dish template based on the latest api change

--- a/src/client/html/dish.html
+++ b/src/client/html/dish.html
@@ -1,10 +1,10 @@
 <div class="col-md-8">
   <div ng-repeat="c in colorList"  class="col-md-6">
     <div class="panel panel-default">
-      <div class="panel-body" >
+      <div class="panel-body" style="padding-bottom: 4px;">
         <div class="row">
           <div class="col-md-9">
-            <h4>{{c}}</h4>
+            <h4>{{c.title}}</h4>
           </div>
           <div class="col-md-3">
             <button type="button" name="button" class="btn btn-default" style="width:100%;">View</button>
